--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </font>
 </ul>
 <font size="5">
-<li>Знание компьютера</li>
+<li>Знание компьютера:</li>
 </font>
 <ul type="circle">
 <font size="4">
