--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 </font>
 </ul>
 </ol>
-<font size="5">
-<p>По всем вопросам обращаться по <a href="https://forms.yandex.ru/u/63988000eb61465db1ee6159">этой ссылке</p>
+<script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe>
 </font>
 </body>
