--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 </font>
 </ul>
 </ol>
-<script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe>
+<p>Если хотите связаться со мной - заполните простую форму ниже:</p>
+<center><script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe></center>
 </font>
 </body>
