--- a/index.html
+++ b/index.html
@@ -1,50 +1,164 @@
 <!doctype html>
 <html>
 <head>
+<title>Резюме</title>
 <!-- css файлы -->
 <link href="C:\Desktop\Practicecss\ulkit.css" rel="stylesheet" type="text/css">
 <link href="C:\Desktop\Practice\css\ulkit.min.css" rel="stylesheet" type="text/css">
 <link href="C:\Desktop\Practice\css\ulkit-rtl.css" rel="stylesheet" type="text/css">
 <link href="C:\Desktop\Practice\css\ulkit-rtl.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/fontawsom-all.min.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css"/>
 <!-- js файлы -->
 <script type="text/javascript" src="C:\Desktop\Practice\js\ulkit.js"></script>
 <script type="text/javascript" src="C:\Desktop\Practice\js\ulkit.min.js"></script>
 <script type="text/javascript" src="C:\Desktop\Practice\js\ulkit-icons.js"></script>
 <script type="text/javascript" src="C:\Desktop\Practice\js\ulkit-icons.min.js"></script>
-<title>Резюме</title>
+    <link rel="shortcut icon" href="assets/images/fav.jpg">
 </head>
 <body>
-<p><font size=7><center><i><a name="info">Резюме</a></i></center></font></p>
-<ol>
-<font size="5">
-<li>Фамилия: Романов</li>
-<li>Имя: Олег</li>
-<li>Отчество: Владимирович</li>
-<li>Дата рождения: 06.05.2003</li>
-<li>Место рождения: г. Челябинск </li>
-<li>Специальность: Информационные Системы и Программирование</li>
-<li>Образование: Среднее неполное</li>
-<li>Хобби:</li>
-</font>
-<ul type="disc">
-<font size="4">
-<li>Rocket League</li>
-<li>Need For Speed: Unbound</li>
-<li>Работа курьером</li>
-</font>
+    <div class="container-fluid overcover">
+        <div class="container profile-box">
+            <div class="row">
+                <div class="col-md-4 left-co">
+                    <div class="left-side">
+                        <div class="profile-info">
+                            <img src="assets/images/profile.jpg" alt="">
+                            <h3>Romanov Oleg</h3>
+                            <span>Web Designer</span>
+                        </div>
+                        <h4 class="ltitle">Contacts</h4>
+                        <div class="contact-box pb0">
+                            <div class="icon">
+                                <i class="fas fa-phone"></i>
+                            </div>
+                            <div class="detail">
+                                +79012345678<br>
+                                +79987654321
+                            </div>
+                        </div>
+                        <div class="contact-box pb0">
+                            <div class="icon">
+                                <i class="fas fa-globe-americas"></i>
+                            </div>
+                            <div class="detail">
+                                revanhan@mail.ru
+                            </div>
+                        </div>
+                        <div class="contact-box">
+                            <div class="icon">
+                                <i class="fas fa-map-marker-alt"></i>
+                            </div>
+                            <div class="detail">
+                                Revolution Square, 1, Chelyabinsk, Russia
+                            </div>
+                        </div>
+                        <h4 class="ltitle">Soc. Networks</h4>
+                        <ul class="row social-link no-margin">
+                            <p>VKontakte: <a href="https://vk.com/gabjagrt">Oleg Romanov</a></p>
+							<p>Github: <a href="https://github.com/gabjagRT">gabjagRT</a></p>
+							<p>Telegram: @gabjagRT</p>
+                        </ul>
+                        <h4 class="ltitle">Referencess</h4>
+                        <div class="refer-cov">
+                            <b>Elena Olegovna</b>
+                            <p>Company Director</p>
+                            <span>888-88-88</span>
+                        </div>
+                        <h4 class="ltitle">Hobbies</h4>
+                        <ul class="hoby row no-margin">
+                            <li><i class="fas fa-futbol"></i> <br> Football</li>
+                            <li><i class="fas fa-film"></i><br> Movies</li>
+                            <li><i class="fas fa-gamepad"></i> <br>Games</li>
+                        </ul>
+                    </div>
+</div>
+<div class="col-md-8 rt-div">
+<div class="rit-cover">
+<div class="hotkey">
+<h1 class="">Romanov Oleg</h1>
+<small>Web Designer</small>
+</div>
+<h2 class="rit-titl"><i class="far fa-user"></i> Profile</h2>
+<div class="about">
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis accumsan purus enim, a vestibulum est tristique sit amet. Suspendisse nibh nisl, imperdiet sit amet mi vitae, elementum elementum nibh. Vivamus vitae eros malesuada, convallis dolor malesuada, lobortis ex. Sed cursus augue risus, ac semper est consectetur vitae. Praesent consequat metus sit amet rhoncus luctus.</p>
+</div>
+<h2 class="rit-titl"><i class="fas fa-briefcase"></i>Work Experience</h2>
+<div class="work-exp">
+<h6>Computer Serving<span>Dec., 7 - Dec. 28, 2021</span></h6>
+<i>​English PRO.Kids</i>
+<ul>
+<li><i class="far fa-hand-point-right"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </li>
+<li><i class="far fa-hand-point-right"></i> Sorem dolor sit amet, consectetur. </li>
+<li><i class="far fa-hand-point-right"></i> Porem ipsum sit amet, consectetur adipiscing </li>
 </ul>
-<font size="5">
-<li>Знание компьютера:</li>
-</font>
-<ul type="circle">
-<font size="4">
-<li>Комплектующие и их сборка</li>
-<li>Visual Studio</li>
-<li>Atom</li>
-</font>
+</div>
+<div class="work-exp">
+<h6>Administrator Assistant<span>June, 1 - June, 22, 2022</span></h6>
+<i>Dextra</i>
+<ul>
+<li><i class="far fa-hand-point-right"></i>Praesent consequat metus sit amet rhoncus luctus.
+</li>
+<li><i class="far fa-hand-point-right"></i>Lorem ipsum dolor sit amet, consectetur. </li>
 </ul>
-</ol>
-<p>Если хотите связаться со мной - заполните простую форму ниже:</p>
-<center><script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe></center>
+</div>
+<h2 class="rit-titl"><i class="fas fa-graduation-cap"></i>Education</h2>
+<div class="education">
+<ul class="row no-margin">
+<li class="col-md-6"><span>2010-2019</span> <br>
+МБОУ СОШ №89 c. Chelyabinsk</li>
+<li class="col-md-6"><span>2019-2023</span> <br>
+СПО "ЧЮК"</li>
+</ul>
+</div>
+<h2 class="rit-titl">
+<i class="fas fa-users-cog"></i> Skills</h2>
+<div class="profess-cover row no-margin">
+<div class="col-md-6">
+<div class=" prog-row row">
+<div class="col-sm-6"> C#
+</div>
+<div class="col-sm-6">
+<div class="progress">
+<div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6">
+<div class="row prog-row">
+<div class="col-sm-6">Computers
+</div>
+<div class="col-sm-6">
+<div class="progress">
+<div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+</div>
+</div>
+</div>
+<div class="col-md-6">
+<div class="row prog-row">
+<div class="col-sm-6">Web Design
+</div>
+<div class="col-sm-6">
+<div class="progress">
+<div class="progress-bar" role="progressbar" style="width: 45%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+</div>
+<script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe>
+</body>
+<script src="assets/js/jquery-3.2.1.min.js"></script>
+<script src="assets/js/popper.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
+<script src="assets/js/script.js"></script>
 </font>
 </body>
