--- a/index.html
+++ b/index.html
@@ -154,7 +154,10 @@
 </div>
 </div>
 </div>
+<h3 style="text-align: center;">If you want to contact with me - fill the form below:</h3>
+<div class="Yandex" style="text-align: center;">
 <script src="https://yastatic.net/s3/frontend/forms/_/embed.js"></script><iframe src="https://forms.yandex.ru/u/63988000eb61465db1ee6159/?iframe=1" frameborder="0" name="ya-form-63988000eb61465db1ee6159" width="650"></iframe>
+</div>
 </body>
 <script src="assets/js/jquery-3.2.1.min.js"></script>
 <script src="assets/js/popper.min.js"></script>
